EFK/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
spec:
  rules:
    - host: ${HOS-dns-name}
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: kibana
                port:
                  number: 5601
